--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,7 @@
 :root {
     --text-color: #111517;
-    --bg-color: #fff;
-}
-
-.dark {
-    --bg-color: #111517;
-    --text-color: #fff;
+    --bg-color: #fafafa;
+    --element-bg: #fff;
 }
 
 *,
@@ -38,11 +34,20 @@ body {
     font-style: normal;
     color: var(--text-color);
     background-color: var(--bg-color);
+    transition: background-color 0.4s ease,
+        color 0.4s ease;
 }
 
 a {
     list-style: none;
     text-decoration: none;
+}
+
+/* DAR MODE */
+.dark {
+    --bg-color: #202c36;
+    --element-bg: #2b3844;
+    --text-color: #fff;
 }
 
 img {
@@ -64,36 +69,62 @@ img {
 .site-header {
     margin-top: 0;
     margin-bottom: 48px;
+    padding-top: 23px;
+    padding-bottom: 24px;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
-    background: #fff;
+    background: var(--bg-color);
+    white-space: nowrap;
 }
 
 .site-header-main {
     display: flex;
-    margin-top: 23px;
-    margin-bottom: 24px;
 }
 
 .site-header-link{
     margin-right: auto;
-}
-
-.site-header-title {
     font-weight: 800;
     font-size: 24px;
     color: var(--text-color);
 }
 
+
 .dark-mode {
+    padding: 0;
+    border: 0;
+    background: transparent;
+    cursor: pointer;
+}
+
+.dark-mode:hover {
+    opacity: 0.8;
+}
+
+.dark-mode:active {
+    opacity: 0.6;
+}
+
+.dark-mode-inner {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.dark-mode-inner-img {
+    display: block;
+}
+
+.dark-mode-inner-text {
+    margin-left: 8px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 16px;
+    color: var(--text-color);
+}
+
 
 /* Main section */
 .main{
-    background-color: #fafafa;
+    background-color: var(--bg-color);
 }
 
 /* Search-filter */
