--- a/css/style.css
+++ b/css/style.css
@@ -132,39 +132,30 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 0;
-    margin-bottom: 48px;
-}
-
-.search {
-    width: 480px;
-    height: 56px;
 }
 
 .search-input {
-    width: 100%;
-    padding: 18px 32px;
+    min-width: 480px;
+    padding: 18px 74px;
+    border: 0;
     border-radius: 5px;
+    background-color: var(--element-bg);
+    color: var(--text-color);
     box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
 }
 
-.search-input::before {
-    width: 20px;
-    height: 20px;
-    background-image: url(../img/search.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center center;
-    content: "";
-}
-
-#filter-name {
-    width: 200px;
-    height: 56px;
+.region-select {
+    min-width: 200px;
     padding: 18px 24px;
+    border: 0;
     border-radius: 5px;
+    background-color: var(--element-bg);
+    color: var(--text-color);
+    box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.05);
 }
 
+
+/* COUNTRY GROUP */
 .countries-group {
     display: flex;
     justify-content: space-between;
