--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ img {
     padding-top: 23px;
     padding-bottom: 24px;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
-    background: var(--bg-color);
+    background: var(--element-bg);
     white-space: nowrap;
 }
 
